# playos-shell

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  gen-context.md  restructuring.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  implementation-task.md
.github/workflows/: build.yml
src/: icons.cpp  icons.h  main.cpp  screen.h  shell_app.cpp  shell_app.h  status_bar.cpp  status_bar.h
src/core/: app_context.h  screen_stack.cpp  screen_stack.h
src/installer/: main.cpp
src/screens/: installer_screen.cpp  installer_screen.h  library_screen.cpp  library_screen.h  overlay_screen.cpp  overlay_screen.h  wifi_screen.cpp  wifi_screen.h
src/ui/: status_bar.cpp  status_bar.h  theme.cpp  theme.h
